<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_splash">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageButton
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/icon_feather_chevron_left_orange"
                android:background="@color/transparent"
                android:id="@+id/back_arrow"
                android:layout_centerVertical="true"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/action_settings"
                android:layout_centerInParent="true"
                android:layout_marginVertical="24dp"
                android:textSize="18sp"
                android:textStyle="bold"/>
        </RelativeLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="64dp"
            style="@style/Widget.Material3.Button.Icon"
            app:cornerRadius="0dp"
            android:text="@string/edit_profile"
            android:textColor="@color/colorWhite"
            app:icon="@drawable/ic_keyboard_arrow_right"
            app:iconSize="28dp"
            app:iconTint="@color/orange"
            app:iconTintMode="multiply"
            app:iconGravity="end"
            android:gravity="left|center_vertical"
            android:paddingLeft="25dp"
            android:id="@+id/btnAction1"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="64dp"
            style="@style/Widget.Material3.Button.Icon"
            app:cornerRadius="0dp"
            android:text="@string/privacy_policy_2"
            android:textColor="@color/colorWhite"
            app:icon="@drawable/ic_keyboard_arrow_right"
            app:iconSize="28dp"
            app:iconTint="@color/orange"
            app:iconTintMode="multiply"
            app:iconGravity="end"
            android:gravity="left|center_vertical"
            android:paddingLeft="25dp"
            android:id="@+id/btnAction2"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="64dp"
            style="@style/Widget.Material3.Button.Icon"
            app:cornerRadius="0dp"
            android:text="@string/term_and_condition"
            android:textColor="@color/colorWhite"
            app:icon="@drawable/ic_keyboard_arrow_right"
            app:iconSize="28dp"
            app:iconTint="@color/orange"
            app:iconTintMode="multiply"
            app:iconGravity="end"
            android:gravity="left|center_vertical"
            android:paddingLeft="25dp"
            android:id="@+id/btnAction3"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="64dp"
            style="@style/Widget.Material3.Button.Icon"
            app:cornerRadius="0dp"
            android:text="@string/terms_of_contest_label"
            android:textColor="@color/colorWhite"
            app:icon="@drawable/ic_keyboard_arrow_right"
            app:iconSize="28dp"
            app:iconTint="@color/orange"
            app:iconTintMode="multiply"
            app:iconGravity="end"
            android:gravity="left|center_vertical"
            android:paddingLeft="25dp"
            android:id="@+id/btnAction4"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="64dp"
            style="@style/Widget.Material3.Button.Icon"
            app:cornerRadius="0dp"
            android:text="@string/faq_label"
            android:textColor="@color/colorWhite"
            app:icon="@drawable/ic_keyboard_arrow_right"
            app:iconSize="28dp"
            app:iconTint="@color/orange"
            app:iconTintMode="multiply"
            app:iconGravity="end"
            android:gravity="left|center_vertical"
            android:paddingLeft="25dp"
            android:id="@+id/btnAction5"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="64dp"
            style="@style/Widget.Material3.Button.Icon"
            app:cornerRadius="0dp"
            android:text="@string/log_out"
            android:textColor="@color/colorWhite"
            app:icon="@drawable/ic_keyboard_arrow_right"
            app:iconSize="28dp"
            app:iconTint="@color/orange"
            app:iconTintMode="multiply"
            app:iconGravity="end"
            android:gravity="left|center_vertical"
            android:paddingLeft="25dp"
            android:id="@+id/btnAction6"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center_horizontal|bottom">
            <TextView
                android:id="@+id/versionBuildNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="20dp" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>