<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".ui.points.PointDetailActivity">
    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_splash"
        android:id="@+id/swipeContainer">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:paddingTop="80dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/your_balance"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginBottom="12dp"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:layout_marginVertical="24dp">
                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:src="@drawable/icon_header1"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textColor="@color/colorWhite"
                    android:textSize="38sp"
                    android:layout_marginLeft="12dp"
                    android:id="@+id/txtTokenAmount"/>
            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/current_token_value"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginBottom="12dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:id="@+id/txtTokenValue"
                android:textSize="30sp"
                android:textColor="@color/colorGreen"
                android:textStyle="bold"
                android:layout_marginBottom="12dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="64dp"
                    style="@style/Widget.Material3.Button.Icon"
                    app:cornerRadius="0dp"
                    android:text="@string/buy_game_point_token"
                    android:textColor="@color/colorWhite"
                    app:icon="@drawable/ic_keyboard_arrow_right"
                    app:iconSize="28dp"
                    app:iconTint="@color/orange"
                    app:iconTintMode="multiply"
                    app:iconGravity="end"
                    android:gravity="left|center_vertical"
                    android:paddingLeft="25dp"
                    android:id="@+id/btnAction1"/>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="64dp"
                    style="@style/Widget.Material3.Button.Icon"
                    app:cornerRadius="0dp"
                    android:text="@string/swap_game_point_token"
                    android:textColor="@color/colorWhite"
                    app:icon="@drawable/ic_keyboard_arrow_right"
                    app:iconSize="28dp"
                    app:iconTint="@color/orange"
                    app:iconTintMode="multiply"
                    app:iconGravity="end"
                    android:gravity="left|center_vertical"
                    android:paddingLeft="25dp"
                    android:id="@+id/btnAction2"/>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="64dp"
                    style="@style/Widget.Material3.Button.Icon"
                    app:cornerRadius="0dp"
                    android:text="@string/transactions_history"
                    android:textColor="@color/colorWhite"
                    app:icon="@drawable/ic_keyboard_arrow_right"
                    app:iconSize="28dp"
                    app:iconTint="@color/orange"
                    app:iconTintMode="multiply"
                    app:iconGravity="end"
                    android:gravity="left|center_vertical"
                    android:paddingLeft="25dp"
                    android:id="@+id/btnAction3"/>
            </LinearLayout>
        </LinearLayout>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        android:background="@null">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:theme="@style/AppTheme.flatToolbar"
            app:navigationIcon="?attr/homeAsUpIndicator"
            app:title=""
            android:backgroundTint="@color/transparent"
            android:background="@color/transparent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="4dp" />

    </com.google.android.material.appbar.AppBarLayout>

</RelativeLayout>

