<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="loginViewModel"
            type="com.jedmahonisgroup.gamepoint.ui.auth.login.LoginViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_splash"
        tools:context=".ui.auth.login.LoginFragment">


        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/loginUpToolbar"
                    android:theme="@style/AppTheme.flatToolbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:elevation="4dp"
                    app:navigationIcon="?attr/homeAsUpIndicator"
                    app:title="" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="48dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:orientation="vertical"
                        android:gravity="center">
                        <ImageView
                            android:layout_width="240dp"
                            android:layout_height="30dp"
                            android:src="@drawable/app_name_white"/>
                        <ImageView
                            android:id="@+id/overlapImage"
                            android:layout_width="86dp"
                            android:layout_height="86dp"
                            android:layout_marginTop="20dp"
                            android:src="@drawable/app_icon" />
                    </LinearLayout>
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true">

                        <ProgressBar
                            android:id="@+id/loginPending"
                            style="?android:attr/progressBarStyle"
                            android:layout_width="match_parent"
                            android:layout_height="64dp"
                            android:layout_centerHorizontal="true"
                            android:layout_gravity="center_vertical|center_horizontal"
                            android:visibility="invisible" />

                        <RelativeLayout
                            android:id="@+id/loginForm"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignParentBottom="true">

                            <LinearLayout
                                android:id="@+id/PasswordLayout"
                                android:layout_width="match_parent"
                                android:layout_marginTop="16dp"
                                android:layout_height="wrap_content"
                                android:layout_centerHorizontal="true"
                                android:orientation="vertical">

                                <com.google.android.material.textfield.TextInputLayout
                                    android:layout_marginTop="24dp"
                                    android:layout_width="match_parent"
                                    android:layout_height="62dip"
                                    app:hintEnabled="false">
                                    <EditText
                                        android:id="@+id/emailField"
                                        android:layout_width="match_parent"
                                        android:layout_marginHorizontal="40dp"
                                        android:layout_height="match_parent"
                                        android:layout_centerHorizontal="true"
                                        android:background="@drawable/btn_blackngray"
                                        android:ems="15"
                                        android:hint="Email address"
                                        android:inputType="textEmailAddress"
                                        android:drawableStart="@drawable/ic_outline_email_24"
                                        android:drawablePadding="12dp"
                                        android:paddingLeft="10dp"
                                        android:paddingRight="10dp"
                                        android:textColor="@color/colorPrimary"
                                        android:textColorHint="@color/textHintColor"
                                        android:textCursorDrawable="@null"/>
                                </com.google.android.material.textfield.TextInputLayout>

                                <com.google.android.material.textfield.TextInputLayout
                                    android:layout_marginTop="24dp"
                                    android:id="@+id/passwordFieldWatcher"
                                    android:layout_width="match_parent"
                                    android:layout_height="62dip"
                                    app:hintEnabled="false">

                                    <EditText
                                        android:id="@+id/loginPassField"
                                        android:layout_width="match_parent"
                                        android:layout_height="match_parent"
                                        android:background="@drawable/btn_blackngray"
                                        android:ems="15"
                                        android:hint="Password"
                                        android:inputType="textPassword"
                                        android:drawableStart="@drawable/ic_baseline_lock_24"
                                        android:drawablePadding="12dp"
                                        android:textColor="@color/colorPrimary"
                                        android:layout_marginHorizontal="40dp"

                                        android:maxLines="1"
                                        android:paddingLeft="10dp"
                                        android:paddingRight="10dp"
                                        android:textColorHint="@color/textHintColor"
                                        android:textCursorDrawable="@null" />

                                </com.google.android.material.textfield.TextInputLayout>

                            </LinearLayout>


                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_below="@+id/PasswordLayout"
                                android:layout_marginHorizontal="40dp"
                                android:id="@+id/containerForgotPassword"
                                android:layout_marginTop="64dp"
                                android:orientation="horizontal">
                                <Button
                                    android:id="@+id/forgotPassword"
                                    style="@style/loginTextButton"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/forgot_your_password"
                                    android:textSize="16sp" />
                                <View
                                    android:layout_width="0dp"
                                    android:layout_height="match_parent"
                                    android:layout_weight="1"/>
                                <Button
                                    android:id="@+id/signup"
                                    style="@style/loginTextButton"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/signUp"
                                    android:textSize="16sp" />
                            </LinearLayout>


                            <Button
                                android:id="@+id/loginFinishButton"
                                style="@style/loginButton"
                                android:layout_below="@id/containerForgotPassword"
                                android:layout_marginHorizontal="80dp"
                                android:text="@string/login" />

                        </RelativeLayout>


                    </RelativeLayout>
                </LinearLayout>
            </RelativeLayout>
        </androidx.core.widget.NestedScrollView>

    </RelativeLayout>
</layout>